--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -1062,7 +1062,7 @@ dl dd {
   On school or restricted networks, you can also play the <a href="https://faf-games.github.io/1v1-lol-official.html" target="_blank">1v1.LOL Official</a> version on  <a href="https://faf-games.github.io/" target="_blank">FaF Games</a> for free, with no downloads required.
 </p>
    <h2>Game Mechanics Explained</h2>
-   <p>1v1 LOL mixes shooting with fast building. Walls block enemy pushes, ramps give you height, and platforms let you reset. The best players balance combat and construction seamlessly for nonstop action.</p>
+   <p>1v1 LOL mixes <a href="https://faf-games.github.io/shooting/index.html" target="_blank">Shooting</a> with fast building. Walls block enemy pushes, ramps give you height, and platforms let you reset. The best players balance combat and construction seamlessly for nonstop action.</p>
   <h2>Tips That Actually Help</h2>
   <ul>
     <li><strong>Hold height, don’t chase.</strong> Force your rival to waste mats climbing.</li>
