--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -1115,7 +1115,7 @@ dl dd {
   <p>Often, yes. Many schools allow mirror links like <em>1v1.lol unblocked 6x</em> or regional versions such as <em>1v1.lol unblocked 66</em>. Always follow your school’s rules.</p>
 
   <h3>Does it work on phones?</h3>
-  <p>It does. The mobile version is solid for casual play, though building is usually easier on keyboard and mouse.</p>
+  <p>It does. The mobile version is solid for casual play, though building is usually easier on a keyboard and mouse.</p>
 
   <h3>What about “1v1lol” or “1v1 unblocked” I see online?</h3>
   <p>Those are just common ways players refer to the game or to school-friendly mirrors. Stick to trusted sources.</p>
