--- a/game/1v1-lol-official.html
+++ b/game/1v1-lol-official.html
@@ -11,7 +11,7 @@
         <meta name="keywords" content="1v1 lol unblocked, 1v1 sites, 1v1unblocked, lol.1v1 unblocked, 1v1 lol sites, 1v1. lol unblocked, 1vs1 lol unblocked, v1.lol unblocked google sites, 1v1 lol google sites, lol 1v1 unblocked, 1v1 lol unblocked 66, 1v1 lol unblocked games, 1v1lol unblocked, 1v1 unblocked, 1v1.lol unblocked games, 1v1.unblocked, https //1v1.lol unblocked, 1v1.lol unblocked 77, 1v1lolunblocked, 1v1 tennis unblocked, 1v1 sites">
         <meta name="news_keywords" content="1v1.lol unblocked, 1v1 lol 66, 1v1 lol Unblocked Games, 1v1.lol hacks, 1v1.lol alternative, 1v1 lol 76, 1v1 lol unblocked 911, 1v1.lol aimbot, 1v1 lol poki, 1v1.lol Unblocked, 1v1 Unblocked ">
         <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/1v1-lol-unblocked.html" />
+        <link rel="canonical" href="/game/1v1-lol-official.html" />
 	<meta name="publisher" content="FAF Games Team">
 	 <meta property="og:image" content="https://faf-games.github.io/assets/img/1v1.lol/1v1-lol-official.webp">
         <!-- Favicon -->
@@ -24,6 +24,7 @@
         <link rel="stylesheet" href="../assets/css/magnific-popup.css">
         <!--Owl-Carousel css-->
         <link rel="stylesheet" href="../assets/css/owl.carousel.min.css">
+		
         <link rel="stylesheet" href="../assets/css/owl.theme.default.min.css">
         <!--NoUiSlider css-->
         <link rel="stylesheet" href="../assets/css/nouislider.min.css">
@@ -1129,7 +1130,7 @@
                                      </ul>
                                  </div>
                                  <div class="copyright">
-                                     <p>&copy; Copyrights 2020 FAF GAMES - All Rights Reserved</p>
+                                     <p>&copy; Copyrights 2025 FAF GAMES - All Rights Reserved</p>
                                  </div>
                              </div>
                          </div>
