--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -686,12 +686,12 @@ dl dd {
 				       <div class="games-item desktop">
 					    <div class="games-single-item img-contain-isotope">
 					        <div class="games-thumb">
-					            <a href="../game/1v1-lol-unblocked.html">
+					            <a href="../game/1v1-lol-official.html">
 					                <img src="../assets/img/1v1.lol/1v1-lol-official.webp" alt="1v1.LOL" title="1v1.LOL" />
 					            </a>
 					        </div>
 					        <div class="games-desc">
-					            <h3><a href="../game/1v1-lol-unblocked.html">1v1.LOL Official</a></h3>
+					            <h3><a href="../game/1v1-lol-official.html">1v1.LOL Official</a></h3>
 					            <p class="game-meta">Action | Shooting | Desktop</p>
 					        </div>
 					    </div>
