--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html lang="en-US">
 <head>	
-    <meta name="robots" content="index, follow">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="robots" content="all,index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
+    <meta name="bingbot" content=" all,index,follow" />
+    <meta name="googlebot" content="all,index,follow" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content=" Unblocked Games for Chromebook: Play a wide range of Unblocked Games Premium you can play at school, work, or anywhere. No downloads needed, just click and start playing.">
