--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
   }
 
   /* If you use Google bottom anchor ads, give the button extra clearance */
-  body.has-bottom-anchor .bmc-fixed-btn{ bottom: 84px; } /* ~sticky ad height */
+  body.has-bottom-anchor .bmc-fixed-btn{ bottom: 100px; } /* ~sticky ad height */
 
   </style>
 
@@ -255,6 +255,7 @@
 	    <li class="nav-item">
             <a href="game/1v1-lol" class="nav-link">1v1.lol Unblocked</a>
         </li>
+		<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="malikshahal" data-color="#FFDD00" data-emoji="☕"  data-font="Inter" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
 	      
         <!-- More Dropdown -->
         <li class="nav-item dropdown">
@@ -1547,22 +1548,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
         }
     </script>
 
-<!-- Buy Me a Coffee (fixed floating) -->
-<div class="bmc-fixed-btn">
-  <script
-    type="text/javascript"
-    src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
-    data-name="bmc-button"
-    data-slug="malikshahal"
-    data-color="#FFDD00"
-    data-emoji="☕"
-    data-font="Inter"
-    data-text="Buy me a coffee"
-    data-outline-color="#000000"
-    data-font-color="#000000"
-    data-coffee-color="#ffffff">
-  </script>
-</div>
+
 <script>
   (function(){
     const mark = () => {
