--- a/index.html
+++ b/index.html
@@ -255,7 +255,6 @@
 	    <li class="nav-item">
             <a href="game/1v1-lol" class="nav-link">1v1.lol Unblocked</a>
         </li>
-		<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="malikshahal" data-color="#FFDD00" data-emoji="☕"  data-font="Inter" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
 	      
         <!-- More Dropdown -->
         <li class="nav-item dropdown">
@@ -1547,6 +1546,21 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
             }
         }
     </script>
+			<div class="bmc-fixed-btn">
+  <script
+    type="text/javascript"
+    src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
+    data-name="bmc-button"
+    data-slug="malikshahal"
+    data-color="#FFDD00"
+    data-emoji="☕"
+    data-font="Inter"
+    data-text="Buy me a coffee"
+    data-outline-color="#000000"
+    data-font-color="#000000"
+    data-coffee-color="#ffffff">
+  </script>
+</div>
 
 
 <script>
