--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <a href="bike/index.html" class="nav-link">Bike</a>
         </li>        
 	    <li class="nav-item">
-            <a href="game/1v1-lol" class="nav-link">1v1.lol Unblocked</a>
+            <a href="game/1v1-lol.html" class="nav-link">1v1.lol Unblocked</a>
         </li>
 	      
         <!-- More Dropdown -->
