--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -684,12 +684,12 @@ dl dd {
 				       <div class="games-item desktop">
 					    <div class="games-single-item img-contain-isotope">
 					        <div class="games-thumb">
-					            <a href="../game/1v1-lol-official.html">
-					                <img src="../assets/img/1v1.lol/1v1-lol-official.webp" alt="1v1.LOL" title="1v1.LOL" />
+					            <a href="../game/1v1-lol-offline.html">
+					                <img src="../assets/img/1v1.lol/1v1-lol-offline.webp" alt="1v1.LOL" title="1v1.LOL" />
 					            </a>
 					        </div>
 					        <div class="games-desc">
-					            <h3><a href="../game/1v1-lol-official.html">1v1.LOL Official</a></h3>
+					            <h3><a href="../game/1v1-lol-offline.html">1v1.LOL offline</a></h3>
 					            <p class="game-meta">Action | Shooting | Desktop</p>
 					        </div>
 					    </div>
@@ -1057,7 +1057,7 @@ dl dd {
 <h2>How to Play 1v1 LOL</h2>
 <p>
   Jump into the game, pick a mode, and try to outlast your opponent. Use building to defend yourself, edit structures for quick peeks, and take precise shots. 
-  On school or restricted networks, you can also play the <a href="https://faf-games.github.io/1v1-lol-official.html" target="_blank">1v1.LOL Official</a> version on  <a href="https://faf-games.github.io/" target="_blank">FaF Games</a> for free, with no downloads required.
+  On school or restricted networks, you can also play the <a href="https://faf-games.github.io/1v1-lol-offline.html" target="_blank">1v1.LOL offline</a> version on  <a href="https://faf-games.github.io/" target="_blank">FaF Games</a> for free, with no downloads required.
 </p>
    <h2>Game Mechanics Explained</h2>
    <p>1v1 LOL mixes <a href="https://faf-games.github.io/shooting/index.html" target="_blank">Shooting</a> with fast building. Walls block enemy pushes, ramps give you height, and platforms let you reset. The best players balance combat and construction seamlessly for nonstop action.</p>
