Update and rename 1v1-lol-official.html to 1v1-lol-offline.html

--- a/game/1v1-lol-offline.html
+++ b/game/1v1-lol-offline.html
@@ -6,14 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>1v1 lol | FAF Games</title>
-        <meta name="description" content=" Play 1v1 LOL official version on Faf Games. It is a fast-paced shooter, with battles, box fights, and battle royale online free, perfect for Chromebook gaming, no download needed!">
+        <meta name="description" content=" Play 1v1 LOL offline version on Faf Games. It is a fast-paced shooter, with battles, box fights, and battle royale online free, perfect for Chromebook gaming, no download needed!">
         <meta name="title" content="1v1 LOL">
         <meta name="keywords" content="1v1 lol unblocked, 1v1 sites, 1v1unblocked, lol.1v1 unblocked, 1v1 lol sites, 1v1. lol unblocked, 1vs1 lol unblocked, v1.lol unblocked google sites, 1v1 lol google sites, lol 1v1 unblocked, 1v1 lol unblocked 66, 1v1 lol unblocked games, 1v1lol unblocked, 1v1 unblocked, 1v1.lol unblocked games, 1v1.unblocked, https //1v1.lol unblocked, 1v1.lol unblocked 77, 1v1lolunblocked, 1v1 tennis unblocked, 1v1 sites">
         <meta name="news_keywords" content="1v1.lol unblocked, 1v1 lol 66, 1v1 lol Unblocked Games, 1v1.lol hacks, 1v1.lol alternative, 1v1 lol 76, 1v1 lol unblocked 911, 1v1.lol aimbot, 1v1 lol poki, 1v1.lol Unblocked, 1v1 Unblocked ">
         <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/1v1-lol-official.html" />
+        <link rel="canonical" href="/game/1v1-lol-offline.html" />
 	    <meta name="publisher" content="FAF Games Team">
-	    <meta property="og:image" content="https://faf-games.github.io/assets/img/1v1.lol/1v1-lol-official.webp">
+	    <meta property="og:image" content="https://faf-games.github.io/assets/img/1v1.lol/1v1-lol-offline.webp">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
@@ -335,8 +335,8 @@
 {
   "@context": "https://schema.org",
   "@type": "VideoGame",
-  "name": "1v1.lol official",
-  "description": "1v1.lol is a fast-paced shooter where you build and fight in real time. Play official battle royale, box fights, and more—no download needed!",
+  "name": "1v1.lol offline",
+  "description": "1v1.lol is a fast-paced shooter where you build and fight in real time. Play offline battle royale, box fights, and more—no download needed!",
   "genre": ["Shooter", "Battle Royale", "Strategy"],
   "publisher": {
     "@type": "Organization",
@@ -495,7 +495,7 @@
                   <div class="contest-details__thumb-slider">
                     <div class="game-iframe-container" id="loadgame">
                       <div class="talpa-splash-container" style="background: var(--color2);"><div class="talpa-splash-top"><div>
-                           <div style="--thumb:url(../assets/img/1v1.lol/1v1-lol-official.png);" alt="Stylish Crop Top Trends"></div>
+                           <div style="--thumb:url(../assets/img/1v1.lol/1v1-lol-offline.png);" alt="Stylish Crop Top Trends"></div>
                            <button id="talpa-splash-button" class="SP-splash-button" onclick="loadMainGame()" style="display: block;">PLAY NOW</button>
                            <div class="talpa-loader" style="display: none;">Loading...</div></div></div><div class="talpa-splash-bottom"></div>
                       </div>
