--- a/index.html
+++ b/index.html
@@ -464,11 +464,11 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 					    <div class="games-single-item img-contain-isotope">
 					        <div class="games-thumb">
 					            <a href="../game/1v1-lol-unblocked.html">
-					                <img src="../assets/img/1v1.lol/1v1-lol-official.webp" alt="1v1.LOL" title="1v1.LOL" />
+					                <img src="../assets/img/1v1.lol/1v1-lol-offline.webp" alt="1v1.LOL" title="1v1.LOL" />
 					            </a>
 					        </div>
 					        <div class="games-desc">
-					            <h2><a href="../game/1v1-lol-unblocked.html">1v1.LOL Official</a></h2>
+					            <h2><a href="../game/1v1-lol-offline.html">1v1.LOL Offline</a></h2>
 					            <p class="game-meta">Action | Shooting | Desktop</p>
 					        </div>
 					    </div>
