--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 				       <div class="games-item desktop">
 					    <div class="games-single-item img-contain-isotope">
 					        <div class="games-thumb">
-					            <a href="../game/1v1-lol-unblocked.html">
+					            <a href="../game/1v1-lol-offline.html">
 					                <img src="../assets/img/1v1.lol/1v1-lol-offline.webp" alt="1v1.LOL" title="1v1.LOL" />
 					            </a>
 					        </div>
