--- a/game/1v1-lol-offline.html
+++ b/game/1v1-lol-offline.html
@@ -1159,7 +1159,7 @@
         <script>
            function loadMainGame()
            {
-                 var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://1v1.lol/?gd_sdk_referrer_url=https://faf-games.github.io/game/1v1-lol-unblocked.html" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+                 var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://1v1.lol/?gd_sdk_referrer_url=https://faf-games.github.io/game/1v1-lol-offline.html" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
                  document.getElementById("loadgame").innerHTML = html;
                  document.getElementById('loadgame').scrollIntoView();
            }
