--- a/game/1v1-lol-offline.html
+++ b/game/1v1-lol-offline.html
@@ -335,14 +335,14 @@
 {
   "@context": "https://schema.org",
   "@type": "VideoGame",
-  "name": "1v1.lol offline",
-  "description": "1v1.lol is a fast-paced shooter where you build and fight in real time. Play offline battle royale, box fights, and more—no download needed!",
+  "name": "1v1 lol offline",
+  "description": "1v1 lol is a fast-paced shooter where you build and fight in real time. Play offline battle royale, box fights, and more—no download needed!",
   "genre": ["Shooter", "Battle Royale", "Strategy"],
   "publisher": {
     "@type": "Organization",
     "name": "FAF Games Team"
   },
-	"image": "https://faf-games.github.io/assets/img/1v1.lol/1v1-lol-unblocked.webp",
+	"image": "https://faf-games.github.io/assets/img/1v1.lol/1v1-lol-offline.webp",
   "operatingSystem": "Any web browser",
   "applicationCategory": "Game",
   "aggregateRating": {
@@ -518,7 +518,7 @@
     <div class="box">
         <h2>About</h2>
         <p>
-            1v1.lol is a fast-paced third-person shooter that blends tactical building and sharp shooting. Designed for competitive play, this multiplayer game pits players in head-to-head battles where strategic building is just as important as aiming. No downloads required, just jump into your browser and dominate your opponents across various game modes like 1v1 Arena, Box Fight, and Battle Royale.
+            1v1 lol is a fast-paced third-person shooter that blends tactical building and sharp shooting. Designed for competitive play, this multiplayer game pits players in head-to-head battles where strategic building is just as important as aiming. No downloads required, just jump into your browser and dominate your opponents across various game modes like 1v1 Arena, Box Fight, and Battle Royale.
         </p>
         <p>
             Whether you are training your reflexes or testing your skills in ranked matches,  <a href="https://faf-games.github.io/game/1v1-lol.html" target="_blank">1v1.lol Unblocked</a> keeps you on your toes with responsive controls and intense matchups. With millions of players worldwide, it is a true test of both your aim and your strategy.
@@ -559,7 +559,7 @@
 	   <div class="box">
 	       <h2>Common Issues</h2>
     <p>
-        While <b>1v1.lol</b> delivers a thrilling experience for most players, a few common issues may occasionally interrupt the fun:
+        While <b>1v1 lol</b> delivers a thrilling experience for most players, a few common issues may occasionally interrupt the fun:
     </p>
     <ul>
         <li><strong>Long Load Times:</strong> The game might take longer than usual to load on slower networks or during peak hours. Patience pays off, but refreshing the page can sometimes help speed things up.</li>
@@ -575,90 +575,7 @@
 
   </section>
       
-<h2 class="section-title">Not Working? Try Other Servers:</h2>
-			 <div class="games-item desktop">
-    <div class="games-single-item img-contain-isotope">
-        <div class="games-thumb">
-            <a href="https://76-games.github.io/play/1v1-lol.html" target="_blank" rel="noopener noreferrer">
-                <img src="/assets/img/1v1.lol/logo.webp" alt="Server 1" title="Server 1" />
-            </a>
-        </div>
-        <div class="games-desc">
-            <h2><a href="https://76-games.github.io/play/1v1-lol.html" target="_blank" rel="noopener noreferrer">Server 1</a></h2>
-            <p class="game-meta">1v1.lol Unblocked</p>
-        </div>
-    </div>
-</div>
 
-<div class="games-item desktop">
-    <div class="games-single-item img-contain-isotope">
-        <div class="games-thumb">
-            <a href="https://1v1-lolunblocked.gitlab.io" target="_blank" rel="noopener noreferrer">
-                <img src="/assets/img/1v1.lol/logo.webp" alt="Server 2" title="Server 2" />
-            </a>
-        </div>
-        <div class="games-desc">
-            <h2><a href="https://1v1-lolunblocked.gitlab.io" target="_blank" rel="noopener noreferrer">Server 2</a></h2>
-            <p class="game-meta">1v1.lol Unblocked</p>
-        </div>
-    </div>
-</div>
-
-<div class="games-item desktop">
-    <div class="games-single-item img-contain-isotope">
-        <div class="games-thumb">
-            <a href="https://cool-math.gitlab.io/go/class-439.html" target="_blank" rel="noopener noreferrer">
-                <img src="/assets/img/1v1.lol/logo.webp" alt="Server 3" title="Server 3" />
-            </a>
-        </div>
-        <div class="games-desc">
-            <h2><a href="https://cool-math.gitlab.io/go/class-439.html" target="_blank" rel="noopener noreferrer">Server 3</a></h2>
-            <p class="game-meta">1v1.lol Unblocked</p>
-        </div>
-    </div>
-</div>
-
-<div class="games-item desktop">
-    <div class="games-single-item img-contain-isotope">
-        <div class="games-thumb">
-            <a href="https://1v1-lol-unblocked.bitbucket.io" target="_blank" rel="noopener noreferrer">
-                <img src="/assets/img/1v1.lol/logo.webp" alt="Server 4" title="Server 4" />
-            </a>
-        </div>
-        <div class="games-desc">
-            <h2><a href="https://1v1-lol-unblocked.bitbucket.io" target="_blank" rel="noopener noreferrer">Server 4</a></h2>
-            <p class="game-meta">1v1.lol Unblocked</p>
-        </div>
-    </div>
-</div>
-
-<div class="games-item desktop">
-    <div class="games-single-item img-contain-isotope">
-        <div class="games-thumb">
-            <a href="https://6x-classroom.io/game/1v1-lol.html" target="_blank" rel="noopener noreferrer">
-                <img src="/assets/img/1v1.lol/logo.webp" alt="Server 5" title="Server 5" />
-            </a>
-        </div>
-        <div class="games-desc">
-            <h2><a href="https://6x-classroom.io/game/1v1-lol.html" target="_blank" rel="noopener noreferrer">Server 5</a></h2>
-            <p class="game-meta">1v1.lol Unblocked</p>
-        </div>
-    </div>
-</div>
-
-<div class="games-item desktop">
-    <div class="games-single-item img-contain-isotope">
-        <div class="games-thumb">
-            <a href="https://docs.google.com/document/d/1sgC0ADkCZnb6yViUYuqt1zyR7gdERMFJovSb_svO4VU/edit?tab=t.0#heading=h.sdzuw0u781k5" target="_blank" rel="noopener noreferrer">
-                <img src="/assets/img/drive.png" alt="Alt Links" title="Alt Links" />
-            </a>
-        </div>
-        <div class="games-desc">
-            <h2><a href="https://docs.google.com/document/d/1sgC0ADkCZnb6yViUYuqt1zyR7gdERMFJovSb_svO4VU/edit?tab=t.0#heading=h.sdzuw0u781k5" target="_blank" rel="noopener noreferrer">Alt Links</a></h2>
-            <p class="game-meta">Alt Links</p>
-        </div>
-    </div>
-</div>
 
 
 
