--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 
 
                                <div class="clearfix gamesContainer">
+								   <h2>Popular Games</h2>
 				
 				<!-- start game item -->
 				<div class="games-item desktop">
