--- a/index.html
+++ b/index.html
@@ -1189,13 +1189,11 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 					</div>
 					<!-- end game item -->
 
+								   <h2>New Games</h2>
+
                         </div>
 		    </div>
-					  <div class="banner-ad-wrapper"><div class="banner-ad-content" style="padding: 20px; text-align: center;">
-
-						  </div>
-						  </div>
-
+					 
 
 	
 
