--- a/index.html
+++ b/index.html
@@ -1206,9 +1206,12 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
 					</div>
 					<!-- end game item -->
 
-								   <h2>New Games</h2>
-
+								   
                         </div>
+
+						 <div class="clearfix gamesContainer">
+							 <h2>New Games</h2>
+							 </div>
 		    </div>
 					 
 
