--- a/index.html
+++ b/index.html
@@ -1210,7 +1210,7 @@ Unblocked games or unblocked games premium, such as <strong>Unblocked games</str
                         </div>
 
 						 <div class="clearfix gamesContainer">
-							 <h2>New Games</h2>
+							 <h2>Recommended Games for You </h2>
 							 </div>
 		    </div>
 					 
