--- a/game/ballistic.html
+++ b/game/ballistic.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Ballistic Unblocked: Play Now for Free on FAF Games</title>
+	    <meta property="og:image" content="https://faf-games.github.io/assets/img/ballistic/ballistic.png">
         <meta name="description" content="
        
             
