--- a/game/drift-hunters.html
+++ b/game/drift-hunters.html
@@ -5,16 +5,18 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="keywords" content="Drift Hunters, play Drift Hunters, Drift Hunters game, Drift Hunters online, Drift Hunters unblocked, Drift car games, free Drift Hunters, Drift racing, Drift simulator, car drifting games">
-	<meta name="description" content="Play Drift Hunters online for free. Experience realistic drifting in this popular car simulator. Drift through different tracks, upgrade your car, and enjoy endless hours of fun!">
+      <meta name="description" content="Play Drift Hunters online for free. Experience realistic drifting in this popular car simulator. Drift through different tracks, upgrade your car, and enjoy endless hours of fun!">
 
       <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/drift-hunters.html" />
-	<meta name="publisher" content="FAF Games Team">
-	<meta name="robots" content="index, follow">
+      <link rel="canonical" href="/game/drift-hunters.html" />
+	  <meta name="publisher" content="FAF Games Team">
+	  <meta name="robots" content="index, follow">
       <!-- Title -->
       <title>"Drift Hunters Unblocked: Play Now for Free on FAF Games"</title>
       <!-- Favicon -->
       <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
+      <meta property="og:image" content="https://faf-games.github.io/assets/img/drifthunters/drift-hunters-logo.webp">
+
              <!--Bootstrap css-->
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <!--Font Awesome css-->
