--- a/game/deadshot-io.html
+++ b/game/deadshot-io.html
@@ -11,7 +11,8 @@
         <meta name="keywords" content="Deadshot.io, Deadshot.io game, Deadshot.io online, Deadshot.io multiplayer, Deadshot.io FPS, Deadshot.io shooter, Deadshot.io play, Deadshot.io free, Deadshot.io unblocked, Deadshot.io download, Deadshot.io cheats, Deadshot.io hacks, Deadshot.io tips, Deadshot.io guide, Deadshot.io gameplay">
         <meta name="author" content="FAF Games Team">
         <link rel="canonical" href="/game/deadshot-io.html" />
-	<meta name="publisher" content="FAF Games Team">
+	    <meta name="publisher" content="FAF Games Team">
+	    <meta property="og:image" content="https://faf-games.github.io/assets/img/deadshot-io/logo.png">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
