--- a/game/fruit-merge.html
+++ b/game/fruit-merge.html
@@ -8,7 +8,7 @@
         <title>Fruit Merge Unblocked: Play Now for Free on FAF Games</title>
         <meta name="description" content="
        
-            
+        <meta property="og:image" content="https://faf-games.github.io/assets/img/fruitmerge/fruit-merge.png">
         <meta name="title" content="Fruit Merge, Fruit Merge Unblocked">
         <meta name="keywords" content="Candy Jump Game, Farm Heroes Saga, Fruit Merge, Candy Crush Saga,
         puzzle games examples
