--- a/game/fortnite.html
+++ b/game/fortnite.html
@@ -7,7 +7,7 @@
         <title>Fortnite Unblocked: Play Now for Free on FAF Games</title>
         <meta name="description" content="Fortnite: What Is It? 
        
-            
+        <meta property="og:image" content="https://faf-games.github.io/assets/img/fortnite/fortnite.png">
         <meta name="title" content="Fortnite">
         <meta name="keywords" content="shooting game online
         shooting games pc
