--- a/game/drift-boss.html
+++ b/game/drift-boss.html
@@ -5,12 +5,13 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="description" content=" Play Drift Boss, the top drifting game! Navigate sharp turns, master challenging tracks, and show off your drifting skills. Perfect for all skill levels—easy to learn, hard to master!">
-     <meta name="keywords" content="drift boss, online drifting game, drift boss unblocked, drift car game, play drift boss, drift boss tips, free drifting game, drift boss game, drift boss high score, drift boss online, drift games, easy drifting game, drift boss levels, drift boss play now, car drifting, simple drifting game, drift boss challenge, drift boss strategies, drift boss unblocked games, drift boss online game" />
+      <meta name="keywords" content="drift boss, online drifting game, drift boss unblocked, drift car game, play drift boss, drift boss tips, free drifting game, drift boss game, drift boss high score, drift boss online, drift games, easy drifting game, drift boss levels, drift boss play now, car drifting, simple drifting game, drift boss challenge, drift boss strategies, drift boss unblocked games, drift boss online game" />
 
       <meta name="author" content="FAF Games Team">
-       <link rel="canonical" href="/game/drift-boss.html" />
-	<meta name="publisher" content="FAF Games Team">
-	<meta name="robots" content="index, follow">
+      <link rel="canonical" href="/game/drift-boss.html" />
+	  <meta name="publisher" content="FAF Games Team">
+	  <meta name="robots" content="index, follow">
+      <meta property="og:image" content="https://faf-games.github.io/assets/img/driftboss/drift-boss-logo.webp">
       <!-- Title -->
       <title>Drift Boss unblocked: Play Now for Free on FAF Games</title>
       <!-- Favicon -->
